--- a/static/assets/css/front/myetsis-ui.css
+++ b/static/assets/css/front/myetsis-ui.css
@@ -2,7 +2,7 @@
 @import '../../../assets/components/library/icons/glyphicons/assets/css/glyphicons_regular.css';
 @import '../../../assets/components/library/icons/glyphicons/assets/css/glyphicons_social.css';
 @import '../../../assets/components/library/icons/glyphicons/assets/css/glyphicons_filetypes.css';
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,800,700,600&subset=latin,latin-ext);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,800,700,600&subset=latin,latin-ext);
 html {
     -webkit-font-smoothing: antialiased !important
 }
